syntax = "proto3";
option optimize_for = SPEED;
option java_package = "org.example.netty.pojo"; // 指定生成到哪个包下
option java_outer_classname = "MyDataInfo";


message MyMessage {
  // 定义一个枚举类型
  enum DataType {
    StudentType = 0;
    WorkerType = 1;
  }

  // 表示传的是哪一个枚举类型
  DataType data_type = 1;

  // 表示每次枚举类型最多只能出现其中的一个，节省空间
  oneof dataBody {
    Student student = 2;
    Worker worker = 3;
  }
}

message Student {
  int32  id = 1;
  string name = 2;
}

message Worker {
  string name = 1;
  int32 age = 2;
}